# deep-parallel-synthesis

./: .gitignore  AI_SETUP.md  DEPLOYMENT.md  Dockerfile  Dockerfile.api  README.md  SYSTEM_REVIEW_PHASE3.md  docker-compose.api.yml  docker-compose.dev.yml  docker-compose.yml  dps_core.py  dps_main.py  fly.toml  package.json  pnpm-lock.yaml  pyproject.toml  quick_start.bat  requirements-api.txt  start_deployment.bat  start_deployment.ps1  validate_deployment.sh  verify_docker.bat
.github/workflows/: ci-cd.yml
api/: auth_manager.py  dps_api_server.py  model_manager.py
app/: globals.css  page.tsx
app/dashboard/: page.tsx
benchmarks/: performance_tests.py
components/: knowledge-graph.tsx  reasoning-display.tsx
configs/: training_config.yaml
data/: example_train.json
deploy/: aws-deploy.sh  deploy.sh  prepare-aws.ps1
deploy/k8s/: deployment.yaml  hpa.yaml  namespace.yaml  storage.yaml
deploy/nginx/: nginx.conf
deploy/prometheus/: alerts.yml  prometheus.yml
dps/: __init__.py  model.py  reasoning.py  training.py  validator.py
eval/: metrics.py
k8s/: dps-api-deployment.yaml  dps-namespace.yaml
lib/db/: reasoning-repo.ts
lib/knowledge-graph/: builder.ts
lib/redis/: cache-manager.ts  client.ts
monitoring/prometheus/: alerts.yml
scripts/: 001_enhance_reasoning_schema.sql  evaluate.py  inference.py  train.py
scripts/training/: README.md  data_exporter.py  gpu_trainer.py  run_gpu_training.sh
serving/: inference_server.py
tests/: test_api_integration.py  test_dps_core.py  test_validator.py
web/: index.html  package.json
web/src/: App.tsx
(+10 files in other folders)
