[project]
name = "deep-parallel-synthesis"
version = "0.0.1"
requires-python = ">=3.11"
authors = [{name = "Deep Parallel Synthesis Team"}]
description = "Advanced scientific reasoning model based on GPT-120B OSS"

[project.dependencies]
transformers = ">=4.43.0"
accelerate = ">=0.31.0"
deepspeed = ">=0.14.0"
vllm = ">=0.5.0"
trl = ">=0.9.0"
peft = ">=0.11.0"
bitsandbytes = ">=0.43.0"
datasets = ">=2.19.0"
evaluate = ">=0.4.2"
flash-attn = ">=2.5.0"
torch = ">=2.3.0"
sentencepiece = ">=0.2.0"
numpy = ">=1.24.0"
scipy = ">=1.11.0"
pandas = ">=2.0.0"
wandb = ">=0.17.0"
tqdm = ">=4.66.0"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"